# cefet-c-openmp-mpi

mpi/: CMakeLists.txt  main.c  mpiCountingSort.h
openmp/: main.c  populateArray.h
parallel/: CMakeLists.txt  parallelCountingSort.h  serialCountingSort.h
